# mp4ToWhisper

./: .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  SAFE_MODE_PROMPT.md  YOLO_PROMPT.md  fixWinTerminalUtf8.md  main.py  pyproject.toml  spec.md
.github/prompts/: errorWords.json  fixErrorWords.prompt.md  mp3.prompt.md  mp4.prompt.md
powershell/: 1.5_Run_whisper.ps1  2_Merge_SRT.ps1  3_Extract_Text.ps1  Clear_File_Dir.ps1
pwsh/: 0_Prepare_And_Convert.ps1  1.5_Run_whisper.ps1  2.2_Convert_S2T.ps1  2.5_Fix_Error_Words.ps1  2_Split_Audio.ps1  3_Run_whisper.ps1  4_Merge_SRT.ps1  5_Convert_S2T.ps1  6_Fix_Error_Words.ps1  Clear_File_Dir.ps1
python_scripts/: convert_s2t.py
